fix(test): resolve NullPointerException and compilation errors in tests
Fix NullPointerException in SimilarProductControllerIntegrationTest by ensuring productClient is properly initialized. Additionally, replace List.of with Arrays.asList in SimilarProductServiceTest to resolve compilation errors. These changes ensure the tests run successfully without runtime or compilation issues.